# adaptive-query-accelerator

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE
.github/workflows/: cmake.yml
benchmarks/: CMakeLists.txt  baseline_benchmark.cpp  eviction_benchmark.cpp  learned_eviction_trainer.cpp  naive_storage.h  read_performance.cpp  storage_benchmark.cpp
docs/: README.md  access-observer.md  b-plus-tree-status.md  baseline-metrics.md  eviction-policy.md  index-metrics.md  learned-eviction.md  lru-metric.md  mmap-metrics.md  offline-policy.md  prefetch.md  storage-architecture.md  storage-format.md  storage-metrics.md  workload-hints.md
src/: CMakeLists.txt  lib.cpp  lib.hpp  main.cpp  workload_hint.cpp  workload_hint.h
src/benchmark/: query_runner.cpp  query_runner.h
src/cache/: eviction_policy.cpp  eviction_policy.h  lru_cache.cpp  lru_cache.h
src/db/: database.cpp  database.h
src/index/: index.cpp  index.h
src/observer/: access_observer.cpp  access_observer.h
src/storage/: b_plus_tree_internal_page.h  b_plus_tree_leaf_page.h  b_plus_tree_page.cpp  b_plus_tree_page.h  mapped_file.cpp  mapped_file.h  page.h  page_cache.cpp  page_cache.h  page_handle.h  storage_engine.cpp  storage_engine.h  storage_reader.cpp  storage_reader.h  storage_writer.cpp  storage_writer.h
src/storage/page/: b_plus_tree_internal_page.cpp  b_plus_tree_internal_page.h  b_plus_tree_leaf_page.cpp  b_plus_tree_leaf_page.h  b_plus_tree_page.cpp  b_plus_tree_page.h
src/utils/: data_generator.cpp  data_generator.h
src/wal/: wal_manager.cpp  wal_manager.h
tests/: CMakeLists.txt  access_observer_test.cpp  concurrency_test.cpp  crash_recovery_demo.cpp  eviction_policy_test.cpp  index_test.cpp  integration_test.cpp  mapped_file_test.cpp  page_cache_test.cpp  page_test.cpp  pinning_test.cpp  prefetch_test.cpp  reader_test.cpp  recovery_test.cpp  test_main.cpp  wal_test.cpp  workload_hint_test.cpp  writer_test.cpp
